Building triggers for r1m1 300822
Add exits
Add spawns Scavs
Add use items (fuel, life), key thetown gate
Add loot to Scav
Add petrolstation
Add openning thetown gate r1m1

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,24 @@ video.xml
 *.yaml
 *.psys
 *.ssl
-
-
-
+# add filels
+!data/music/silence.ogg
+!data/if/ico_hd/InventoryDlg/goods/lom_use.dds
+!data/if/ico_hd/InventoryDlg/goods/rabochee_oborudovanie_use.dds
+!data/if/ico_hd/InventoryDlg/goods/mikro_use.dds
+!data/if/ico_hd/InventoryDlg/goods/oil_use.dds
+!data/if/ico_hd/InventoryDlg/goods/kanistra_full_use.dds
+!data/if/ico_hd/InventoryDlg/goods/kanistra_nil_use.dds
+!data/sounds/other/use_items/arm.wav
+!data/sounds/other/use_items/life.wav
+!data/sounds/other/use_items/oil.wav
+!data/models/logos/nomads.dds
+!data/if/ico_hd/clans/scavs02.dds
+!data/if/ico/clans/scavs02.dds
+!data/if/ico/clans/scavs03.dds
+!data/sounds/other/petrolstation/fuel_petrol_start.wav
+!data/sounds/other/petrolstation/fuel_petrol_process.wav
+!data/sounds/other/petrolstation/fuel_petrol_end.wav
+!data/sounds/other/gate/opening_gate.wav
+!data/sounds/other/gate/opening_gate_end.wav
+!data/sounds/other/gate/closed_gate.wav
