--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ video.xml
 !data/sounds/other/gate/opening_gate.wav
 !data/sounds/other/gate/opening_gate_end.wav
 !data/sounds/other/gate/closed_gate.wav
+!data/if/ico_hd/InventoryDlg/goods/keys/item_key_1.dds
+!data/maps/r1m1/displace.bin
+!data/maps/r1m1/player_passmap.bin
