Add dots in r1m1
Improved spawn loot in Scavs

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,15 @@ zoo/
 копия (2) showcars/
 logs_commod/
 mods/
+mainmenu/
+r1m2/
+r1m3/
+r2m1/
+r2m2/
+r3m1/
+r3m2/
+r4m1/
+r4m2/
 # not used files
 datasources.txt
 devicecompatible.xml
