Add barrel lootbox in r1m1
Add model plastic barrel
Add new wares in barrel in r1m1
Add new wares in scavs

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ mods/
 mainmenu/
 r1m2/
 r1m3/
+r1m4/
 r2m1/
 r2m2/
 r3m1/
@@ -124,3 +125,5 @@ data/if/ico_hd/inventorydlg/goods/new/info/item_rozvidka2.dds
 !data/models/goods/info/*.gam
 !data/models/goods/other/*.dds
 !data/models/goods/other/*.gam
+!data/models/objects/box/plastic_barrel_box.gam
+!data/models/objects/box/plastic_barrel.dds
