Add loot in r1m1

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ data/if/ico_hd/inventorydlg/goods/new/info/item_rozvidka2.dds
 !data/models/goods/other/*.gam
 !data/models/objects/box/plastic_barrel_box.gam
 !data/models/objects/box/plastic_barrel.dds
+!data/models/objects/box/boxbox.gam
+!data/models/objects/box/computerbox.dds
+!data/models/objects/box/electrobox.dds
+!data/models/objects/box/medicalbox.dds
+!data/models/objects/box/gunbox.dds
+!data/models/objects/box/tehnobox.dds
+!data/models/objects/box/toolsbox.dds
+!data/models/objects/box/valuablebox.dds
