Add boss Vitaly in r1m1

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,12 @@ data/if/ico_hd/inventorydlg/goods/new/info/item_rozvidka2.dds
 !data/models/objects/box/tehnobox.dds
 !data/models/objects/box/toolsbox.dds
 !data/models/objects/box/valuablebox.dds
+!data/effects/lights/blink.psys
+!data/effects/lights/blink1.psys
+!data/models/vehicles/fighter/cab03/*.dds
+!data/models/vehicles/fighter/cab03/*.bmp
+!data/models/vehicles/fighter/cab03/*.tga
+!data/models/vehicles/fighter/cab03/cab03.gam
+!data/models/vehicles/hunter/cab03/*.dds
+!data/models/vehicles/hunter/cab03/*.tga
+!data/models/vehicles/hunter/cab03/cab03.gam
