Add AirDrop in r1m1
+ Add sound fx for fading msg

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ data/if/ico_hd/inventorydlg/goods/new/info/item_rozvidka2.dds
 !data/models/vehicles/hunter/cab03/*.dds
 !data/models/vehicles/hunter/cab03/*.tga
 !data/models/vehicles/hunter/cab03/cab03.gam
+!data/models/objects/box/airbox.gam
+!data/models/objects/box/airbox.dds
+!data/sounds/other/interface/fading_msg.wav
