--- a/.gitignore
+++ b/.gitignore
@@ -98,9 +98,14 @@ video.xml
 !data/sounds/other/use_items/life.wav
 !data/sounds/other/use_items/oil.wav
 !data/models/logos/nomads.dds
-!data/if/ico_hd/clans/scavs02.dds
+!data/models/logos/vagabonds.dds
+!data/models/logos/beer.dds
+!data/if/ico_hd/clans/bear02.dds
+!data/if/ico_hd/clans/usec02.dds
 !data/if/ico/clans/scavs02.dds
 !data/if/ico/clans/scavs03.dds
+!data/if/ico/clans/bear03.dds
+!data/if/ico/clans/usec03.dds
 !data/sounds/other/petrolstation/fuel_petrol_start.wav
 !data/sounds/other/petrolstation/fuel_petrol_process.wav
 !data/sounds/other/petrolstation/fuel_petrol_end.wav
@@ -108,6 +113,7 @@ video.xml
 !data/sounds/other/gate/opening_gate_end.wav
 !data/sounds/other/gate/closed_gate.wav
 !data/maps/r1m1/displace.bin
+!data/maps/r1m1/passmap.raw
 !data/maps/r1m1/player_passmap.bin
 !data/if/ico_hd/inventorydlg/goods/new/building/*.dds
 !data/if/ico_hd/inventorydlg/goods/new/electronics/*.dds
@@ -147,3 +153,7 @@ data/if/ico_hd/inventorydlg/goods/new/info/item_rozvidka2.dds
 !data/models/objects/box/airbox.gam
 !data/models/objects/box/airbox.dds
 !data/sounds/other/interface/fading_msg.wav
+!data/if/ico_hd/inventorydlg/weapon/a_hornet.dds
+!data/if/ico_hd/inventorydlg/weapon/a_hornet_min.dds
+!data/models/guns/sml_american_hornet01.dds
+!data/models/guns/sml_american_hornet01_gun.gam
