--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,10 @@ video.xml
 !data/maps/r1m1/displace.bin
 !data/maps/r1m1/passmap.raw
 !data/maps/r1m1/player_passmap.bin
+!data/maps/r1m1/lightmap_daytime_r1m1.dds
+!data/maps/r1m1/lightmap_sunrisetime_r1m1.dds
+!data/maps/r1m1/lightmap_sunsettime_r1m1.dds
+!data/maps/r1m1/lightmap_nighttime_r1m1.dds
 !data/if/ico_hd/inventorydlg/goods/new/building/*.dds
 data/if/ico_hd/inventorydlg/goods/new/building/item_bolts2.dds
 data/if/ico_hd/inventorydlg/goods/new/building/item_nuts2.dds
