Add new map r0m0 Build 091123
Добавлена карта "убежища" и вместе с ней необходимые модели и звуки.
В убежище добавлена возможность строить (заправку, доп.ящик, ящик диких, генератор, освещение).
Мелкие изменения в интерфейсе.

--- a/.gitignore
+++ b/.gitignore
@@ -157,7 +157,13 @@ data/if/ico_hd/inventorydlg/goods/new/building/item_nuts2.dds
 !data/models/vehicles/hunter/cab03/cab03.gam
 !data/models/objects/box/airbox.gam
 !data/models/objects/box/airbox.dds
+!data/models/buildings/region0/*.gam
+!data/models/buildings/region0/generator/*.gam
+!data/models/buildings/region0/generator/*.dds
 !data/sounds/other/interface/fading_msg.wav
+!data/sounds/other/interface/building.wav
+!data/sounds/other/generator/*.wav
+!data/sounds/other/chest_scavs/*.ogg
 !data/if/ico_hd/inventorydlg/weapon/a_hornet.dds
 !data/if/ico_hd/inventorydlg/weapon/a_hornet_min.dds
 !data/models/guns/sml_american_hornet01.dds
@@ -175,3 +181,29 @@ data/if/ico_hd/splashwnd/loading_bar.dds
 data/if/ico_hd/splashwnd/loading_down.dds
 data/if/ico_hd/splashwnd/loading_up.dds
 !data/if/ico_hd/splashes/druids.dds
+!data/if/ico_hd/splashes/r0m0.dds
+!data/maps/r0m0/colormap.raw
+!data/maps/r0m0/displace.bin
+!data/maps/r0m0/level.tile
+!data/maps/r0m0/lightmap_daytime_r0m0.dds
+!data/maps/r0m0/lightmap_nighttime_r0m0.dds
+!data/maps/r0m0/lightmap_sunrisetime_r0m0.dds
+!data/maps/r0m0/lightmap_sunsettime_r0m0.dds
+!data/maps/r0m0/NormalMap.bin
+!data/maps/r0m0/passmap.raw
+!data/maps/r0m0/player_passmap.bin
+!data/maps/r0m0/QuestStates.xml
+!data/maps/r0m0/ShoreLine.bin
+!data/maps/r0m0/water.raw
+!data/maps/r0m0.ssl
+!data/if/map/dungeon.dds
+!data/if/ico/talkwithnpcdlg/petrolstation_dlg.dds
+!data/if/ico/talkwithnpcdlg/inventory_lvl_2_dlg.dds
+!data/if/ico/talkwithnpcdlg/chest_scavs_dlg.dds
+!data/if/ico/talkwithnpcdlg/tunel_1_dlg.dds
+!data/if/ico/talkwithnpcdlg/tunel_2_dlg.dds
+!data/if/ico/talkwithnpcdlg/tunel_3_dlg.dds
+!data/if/ico/talkwithnpcdlg/generator_lvl_1_dlg.dds
+!data/if/ico/talkwithnpcdlg/generator_lvl_2_dlg.dds
+!data/if/ico/talkwithnpcdlg/generator_lvl_3_dlg.dds
+!data/if/ico/talkwithnpcdlg/lampposts_dlg.dds
