Add Dungeon r0m1 Build 181123
Добавлено подземелье r0m1
Добавлен въезд через туннель на r0m1
Мелкие изменения на r0m0
Новые изменения на r0m1 (Возможность остановить испытание, Спавн врагов на позиции, где нет игрока, Дроп лута с врагов, Тех. часть)

--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,7 @@ data/if/ico_hd/splashwnd/loading_down.dds
 data/if/ico_hd/splashwnd/loading_up.dds
 !data/if/ico_hd/splashes/druids.dds
 !data/if/ico_hd/splashes/r0m0.dds
+!data/if/ico_hd/splashes/dungeon.dds
 !data/maps/r0m0/colormap.raw
 !data/maps/r0m0/displace.bin
 !data/maps/r0m0/level.tile
@@ -252,3 +253,21 @@ data/if/ico_hd/weaponinfolist/weapon_slot.dds
 !data/if/ico_hd/gamemenu/gamemenu_logo_xm.dds
 !data/if/ico_hd/radarwnd/efa_top_radar.dds
 !data/if/ico_hd/speedometerwnd/efa_top_speedometer.dds
+!data/maps/r0m1/colormap.raw
+!data/maps/r0m1/displace.bin
+!data/maps/r0m1/level.tile
+!data/maps/r0m1/lightmap_daytime_r0m1.dds
+!data/maps/r0m1/lightmap_nighttime_r0m1.dds
+!data/maps/r0m1/lightmap_sunrisetime_r0m1.dds
+!data/maps/r0m1/lightmap_sunsettime_r0m1.dds
+!data/maps/r0m1/NormalMap.bin
+!data/maps/r0m1/passmap.raw
+!data/maps/r0m1/player_passmap.bin
+!data/maps/r0m1/QuestStates.xml
+!data/maps/r0m1/ShoreLine.bin
+!data/maps/r0m1/water.raw
+!data/maps/r0m1.ssl
+!data/models/buildings/domain/post_challenge/*.gam
+!data/models/buildings/domain/post_challenge/*.
+!data/sounds/other/dungeon/*.wav
+!data/music/dungeons/*.ogg
