--- a/.gitignore
+++ b/.gitignore
@@ -268,6 +268,6 @@ data/if/ico_hd/weaponinfolist/weapon_slot.dds
 !data/maps/r0m1/water.raw
 !data/maps/r0m1.ssl
 !data/models/buildings/domain/post_challenge/*.gam
-!data/models/buildings/domain/post_challenge/*.
+!data/models/buildings/domain/post_challenge/*.dds
 !data/sounds/other/dungeon/*.wav
 !data/music/dungeons/*.ogg
