--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ data/if/ico_hd/splashwnd/loading_up.dds
 !data/maps/r0m0.ssl
 !data/if/map/dungeon.dds
 !data/if/map/r1m1.dds
+!data/if/map/r0m0.dds
 !data/if/ico/talkwithnpcdlg/petrolstation_dlg.dds
 !data/if/ico/talkwithnpcdlg/inventory_lvl_2_dlg.dds
 !data/if/ico/talkwithnpcdlg/chest_scavs_dlg.dds
@@ -306,4 +307,10 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/if/ico_hd/inventorydlg/weapon/hailSideGun_min.dds
 !data/if/ico_hd/inventorydlg/weapon/tank_min.dds
 !data/if/ico_hd/inventorydlg/weapon/dimzavesa_min.dds
+!data/if/ico_hd/inventorydlg/bug/*.dds
+!data/if/ico_hd/inventorydlg/molokovoz/*.dds
+!data/if/ico_hd/inventorydlg/ural/*.dds
+!data/if/ico_hd/inventorydlg/belaz/*.dds
+!data/if/ico_hd/inventorydlg/mirotvorec/*.dds
+!data/if/ico_hd/inventorydlg/cruizer/*.dds
 
