--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,8 @@ data/if/ico_hd/inventorydlg/goods/new/special/item_ms20001.dds
 !data/models/objects/box/tehnobox.dds
 !data/models/objects/box/toolsbox.dds
 !data/models/objects/box/valuablebox.dds
+!data/models/objects/box/box_videocard.dds
+!data/models/objects/box/box_videocard.gam
 !data/effects/lights/blink.psys
 !data/effects/lights/blink1.psys
 !data/models/vehicles/fighter/cab03/*.dds
@@ -161,7 +163,9 @@ data/if/ico_hd/inventorydlg/goods/new/special/item_ms20001.dds
 !data/models/vehicles/hunter/cab03/*.tga
 !data/models/vehicles/hunter/cab03/cab03.gam
 !data/models/objects/box/airbox.gam
+!data/models/objects/box/airbox2.gam
 !data/models/objects/box/airbox.dds
+!data/models/objects/box/airbox2.dds
 !data/models/buildings/region0/*.gam
 !data/models/buildings/region0/generator/*.gam
 !data/models/buildings/region0/generator/*.dds
@@ -190,6 +194,21 @@ data/if/ico_hd/splashwnd/loading_up.dds
 !data/if/ico_hd/splashes/druids.dds
 !data/if/ico_hd/splashes/r0m0.dds
 !data/if/ico_hd/splashes/dungeon.dds
+!data/if/ico_hd/splashes/r1m1_1.dds
+!data/if/ico_hd/splashes/r1m1_2.dds
+!data/if/ico_hd/splashes/r1m1_3.dds
+!data/if/ico_hd/splashes/r1m1_4.dds
+!data/if/ico_hd/splashes/r1m1_5.dds
+!data/if/ico_hd/splashes/r1m1_6.dds
+!data/if/ico_hd/splashes/r1m1_7.dds
+!data/if/ico_hd/splashes/menu_1.dds
+!data/if/ico_hd/splashes/menu_2.dds
+!data/if/ico_hd/splashes/menu_3.dds
+!data/if/ico_hd/splashes/menu_4.dds
+!data/if/ico_hd/splashes/menu_5.dds
+!data/if/ico_hd/splashes/menu_6.dds
+!data/if/ico_hd/splashes/menu_7.dds
+!data/if/ico_hd/splashes/menu_8.dds
 !data/maps/r0m0/colormap.raw
 !data/maps/r0m0/displace.bin
 !data/maps/r0m0/level.tile
@@ -253,14 +272,16 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/if/ico_hd/garagewnd/vehiclescroll/*.dds
 !data/if/ico_hd/garagewnd/icons/*.dds
 !data/if/ico_hd/weaponinfolist/*.dds
-!data/if/ico_hd/weaponinfolist/weapongroupbuttons/*.dds
+!data/if/ico_hd/weaponinfolist/weapongroupbuttons/*.dds 
 !data/if/frames/wshop_button_2add_b_hd.dds
 !data/if/frames/wshop_button_2add_hd.dds
 !data/if/frames/wshop_button_2sub_b_hd.dds
 !data/if/frames/wshop_button_2sub_hd.dds
+!data/if/frames/up_panel_back_darker.dds
 !data/if/ico_hd/gamemenu/gamemenu_logo_xm.dds
 !data/if/ico_hd/radarwnd/efa_top_radar.dds
 !data/if/ico_hd/speedometerwnd/efa_top_speedometer.dds
+!data/if/ico_hd/helpinmaingameinterfacewnd/fhelp_texture.dds
 !data/maps/r0m1/colormap.raw
 !data/maps/r0m1/displace.bin
 !data/maps/r0m1/level.tile
@@ -284,7 +305,7 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/music/dungeons/*.ogg
 !data/music/item_music/*.ogg
 !data/music/cinematics/Credits01.ogg
-!data/music/cinematics/Credits02.ogg
+!data/music/mainmenu_remaster.ogg
 !data/if/ico_hd/inventorydlg/weapon/bumblebee_min.dds
 !data/if/ico_hd/inventorydlg/weapon/dragon_min.dds
 !data/if/ico_hd/inventorydlg/weapon/hammer01_min.dds
@@ -325,6 +346,8 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/if/ico_hd/inventorydlg/belaz/*.dds
 !data/if/ico_hd/inventorydlg/mirotvorec/*.dds
 !data/if/ico_hd/inventorydlg/cruizer/*.dds
+!data/if/ico_hd/inventorydlg/cell_free.dds
+!data/if/ico_hd/inventorydlg/cell_busy.dds
 !data/models/questitems/map_location.gam
 !data/models/questitems/map_r1m1.dds
 !data/if/ico_hd/optionswnd/panel.dds
