--- a/.gitignore
+++ b/.gitignore
@@ -402,11 +402,22 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/buildings/region5/wood_electro_stolb/*.dds
 !data/models/buildings/region5/wood_fence/*.gam
 !data/models/buildings/region5/wood_fence/*.dds
+!data/models/buildings/region5/inscriptions/*.dds
+!data/models/buildings/region5/inscriptions/*.gam
+!data/models/buildings/region1/lamppost1_r5.gam
 !data/models/nature/region5/trees/*.gam
 !data/models/nature/region5/trees/*.dds
+!data/models/nature/region1/trees/listvenoe1_r5.gam
 !data/effects/other/air_smoke.psys
 !data/effects/other/green_smoke.psys
 !data/fx/smoke/red_smoke.tga
 !data/fx/smoke/green_smoke.tga
+!data/maps/r5m1/*.raw
+!data/maps/r5m1/*.bin
+!data/maps/r5m1/*.tile
+!data/maps/r5m1/summer/*.dds
+!data/maps/r5m1/winter/*.dds
+!data/maps/r5m1.ssl
+
 
 
