--- a/.gitignore
+++ b/.gitignore
@@ -418,6 +418,9 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/maps/r5m1/summer/*.dds
 !data/maps/r5m1/winter/*.dds
 !data/maps/r5m1.ssl
-
+!data/models/dynamic/region1/barrel_1.gam
+!data/models/dynamic/region1/barrel_2.gam
+!data/models/dynamic/region1/barrel_3.gam
+!data/models/goods/koroldrov.gam
 
 
