--- a/.gitignore
+++ b/.gitignore
@@ -405,6 +405,14 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/buildings/region5/inscriptions/*.dds
 !data/models/buildings/region5/inscriptions/*.gam
 !data/models/buildings/region1/lamppost1_r5.gam
+!data/models/buildings/region5/metall_barrel/*.dds
+!data/models/buildings/region5/metall_barrel/*.gam
+!data/models/buildings/region5/tent/*.dds
+!data/models/buildings/region5/tent/*.gam
+!data/models/buildings/region5/farm/*.dds
+!data/models/buildings/region5/farm/*.gam
+!data/models/buildings/region5/garage/*.dds
+!data/models/buildings/region5/garage/*.gam
 !data/models/nature/region5/trees/*.gam
 !data/models/nature/region5/trees/*.dds
 !data/models/nature/region1/trees/listvenoe1_r5.gam
@@ -422,5 +430,8 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/dynamic/region1/barrel_2.gam
 !data/models/dynamic/region1/barrel_3.gam
 !data/models/goods/koroldrov.gam
+!data/models/buildings/region1/sack_wall1.gam
+!data/models/buildings/region1/sack_wall2.gam
+!data/models/textures/region1/envir_barricade2.dds
 
 
