--- a/.gitignore
+++ b/.gitignore
@@ -302,6 +302,7 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/sounds/other/use_items/*.wav
 !data/sounds/other/quest/*.ogg
 !data/sounds/other/color_fier/color_fier.wav
+!data/sounds/other/garage/*.wav
 !data/music/dungeons/*.ogg
 !data/music/item_music/*.ogg
 !data/music/cinematics/Credits01.ogg
