--- a/.gitignore
+++ b/.gitignore
@@ -419,8 +419,11 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/nature/region1/trees/listvenoe1_r5.gam
 !data/effects/other/air_smoke.psys
 !data/effects/other/green_smoke.psys
+!data/effects/other/oracul_main9.psys
+!data/effects/lights/lens_d8.psys
 !data/fx/smoke/red_smoke.tga
 !data/fx/smoke/green_smoke.tga
+!data/fx/trail/trail11.tga
 !data/maps/r5m1/*.raw
 !data/maps/r5m1/*.bin
 !data/maps/r5m1/*.tile
@@ -434,5 +437,6 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/buildings/region1/sack_wall1.gam
 !data/models/buildings/region1/sack_wall2.gam
 !data/models/textures/region1/envir_barricade2.dds
+!data/models/lights/gen_lvl2_light.xml
 
 
