--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,10 @@ data/if/ico_hd/inventorydlg/goods/new/special/item_ms20001.dds
 !data/models/buildings/region0/*.gam
 !data/models/buildings/region0/generator/*.gam
 !data/models/buildings/region0/generator/*.dds
+!data/models/buildings/region0/3d_text/*.gam
+!data/models/buildings/region0/3d_text/*.dds
+!data/models/buildings/region0/3d_text/3d_timer/*.gam
+!data/models/buildings/region0/3d_text/3d_timer/*.dds
 !data/sounds/other/interface/fading_msg.wav
 !data/sounds/other/interface/building.wav
 !data/sounds/other/interface/buy.ogg
