--- a/.gitignore
+++ b/.gitignore
@@ -351,6 +351,9 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/if/ico_hd/inventorydlg/belaz/*.dds
 !data/if/ico_hd/inventorydlg/mirotvorec/*.dds
 !data/if/ico_hd/inventorydlg/cruizer/*.dds
+!data/if/ico_hd/inventorydlg/scout/*.dds
+!data/if/ico_hd/inventorydlg/fighter/*.dds
+!data/if/ico_hd/inventorydlg/hunter/*.dds
 !data/if/ico_hd/inventorydlg/cell_free.dds
 !data/if/ico_hd/inventorydlg/cell_busy.dds
 !data/models/questitems/map_location.gam
