--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,7 @@ data/if/ico_hd/splashwnd/loading_up.dds
 !data/if/ico/talkwithnpcdlg/garage_dlg.dds
 !data/if/ico/talkwithnpcdlg/traider_1_dlg.dds
 !data/if/ico/talkwithnpcdlg/mehanic_dlg.dds
+!data/if/ico/talkwithnpcdlg/buyer_dlg.dds
 !data/if/ico/inventorydlg/cruizer/*.dds
 !data/if/ico/globalmap/gmap_line.dds
 !data/if/ico_hd/globalmap/*.dds
@@ -362,6 +363,7 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/if/ico_hd/towndlg/city_mainscreen.dds
 !data/models/masks/region0/*.gam
 !data/models/masks/region0/*.dds
+!data/models/masks/region1/man/headfones01.dds
 !data/models/buildings/region1/road_sign/*.gam
 !data/models/buildings/region1/road_sign/*.dds
 !data/models/objects/keqing/*.gam
@@ -445,5 +447,6 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/buildings/region1/sack_wall2.gam
 !data/models/textures/region1/envir_barricade2.dds
 !data/models/lights/gen_lvl2_light.xml
+!data/if/ico_hd/TownDlg/bar_char_bkg.dds
 
 
