Add assets for git

--- a/.gitignore
+++ b/.gitignore
@@ -451,5 +451,9 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !data/models/textures/region1/envir_barricade2.dds
 !data/models/lights/gen_lvl2_light.xml
 !data/if/ico_hd/TownDlg/bar_char_bkg.dds
+!assets/*.png
+!assets/*.jpg
+!assets/*.gif
+!assets/git_assets/*.png
 
 
