--- a/.gitignore
+++ b/.gitignore
@@ -455,6 +455,8 @@ data/if/ico_hd/questlog/unselect_quest.dds
 !assets/*.jpg
 !assets/*.gif
 !assets/git_assets/*.png
+!assets/git_assets/*.jpg
 !LICENSE.txt
+!manifest.yaml
 
 
